# OpenLPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CPP.md  build.py  demo.py  main.cpp  mycode.py  requirements.txt  setup.py
cmake/: bindings.cmake  ctest.cmake  openLPT.cmake
demo/python/: demo_camera_refraction.ipynb  demo_lpt.ipynb  demo_math.ipynb  demo_math.py  demo_object.ipynb  demo_stb.ipynb  fileIO.py
inc/libIO/: myIO.h  myIO.hpp
inc/libMath/: Camera.h  ImageIO.h  KalmanFilter.h  Matrix.h  Matrix_bool.h  ObjectFinder.h  ObjectInfo.h  STBCommons.h  STBCommons.hpp  advanceMATH.hpp  myMATH.h  myMATH.hpp
inc/libObject/: ObjectFinder.h  ObjectInfo.h
inc/libObject/Sphere/: SphereInfo.h
inc/libSTB/: IPR.h  ImageIO.h  OTF.h  ObjectFinder.h  ObjectInfo.h  PredField copy.h  PredField.h  STB copy.h  STB.h  Shake.h  StereoMatch.h  Track copy.h  Track.h
inc/libtiff/: CMakeLists.txt  tif_dir.c  tif_dirread.c  tif_dirwrite.c
src/: bindings.cpp  main.cpp
src/pybind_OpenLPT/: pyCamera.cpp  pyIPR.cpp  pyImageIO.cpp  pyInterface.cpp  pyKalmanFilter.cpp  pyMatrix.cpp  pyOTF.cpp  pyObjectFinder.cpp  pyObjectInfo.cpp  pyOpenLPT.cpp  pyPredField.cpp  pySTB.cpp  pySTBCommons.cpp  pyShake.cpp  pyStereoMatch.cpp  pyTrack.cpp  pymyMath.cpp
src/srcIO/: myIO.cpp
src/srcMath/: Camera.cpp  ImageIO.cpp  KalmanFilter.cpp  Matrix.hpp  Matrix_bool.hpp  ObjectFinder.hpp  ObjectInfo.cpp  advanceMATH.hpp  myMATH.cpp
src/srcObject/: ObjectFinder.hpp  ObjectInfo.cpp
src/srcObject/Sphere/: SphereInfo.cpp
src/srcSTB/: Camera.cpp  IPR.cpp  IPR.hpp  ImageIO.cpp  OTF.cpp  ObjectFinder.hpp  PredField copy.hpp  PredField.cpp  PredField.hpp  STB copy.hpp  STB.hpp  Shake copy.cpp  Shake.cpp  Shake.hpp  StereoMatch previous.hpp  StereoMatch.hpp  Track copy.hpp  Track.hpp
test/: test.h  test_Camera.cpp  test_IPR.cpp  test_ImageIO.cpp  test_Matrix.cpp  test_OTF.cpp  test_ObjectFinder.cpp  test_ObjectInfo.cpp  test_PIVChallenge.cpp  test_PredField.cpp  test_STB.cpp  test_Shake.cpp  test_SphereInfo.cpp  test_StereoMatch.cpp  test_Track.cpp  test_myMATH.cpp
test/inputs/test_Camera/: cam1.txt  cam1_poly.txt  cam1_refract.txt  cam2.txt  cam2_poly.txt  cam3_poly.txt  cam4_poly.txt  cam5.txt  cam6_refract.txt  convert_digit.py  getSol.py  polynomial.mat
test/inputs/test_ImageIO/: test_16bits.tif  test_8bits.tif  test_function_1.txt  test_function_2.txt
test/inputs/test_OTF/: getSol.py  otf.txt
test/inputs/test_ObjectFinder/: cam1ImageNames.txt  cam2ImageNames.txt  cam4ImageNames.txt  getSol.py  img_cam1.tif  test_function_1.txt  untitled.m  untitled_2.m
test/inputs/test_ObjectInfo/: cam1.txt  cam3.txt  cam4.txt
test/inputs/test_PIVChallenge/: 1.py  config.txt  tracerConfig.txt  untitled.m
test/inputs/test_PIVChallenge/D_cal/: D_cal_cam0_0002.tif  D_cal_cam0_0003.tif  D_cal_cam0_0004.tif  D_cal_cam0_0005.tif  D_cal_cam1_0001.tif  D_cal_cam1_0002.tif  D_cal_cam1_0003.tif  D_cal_cam1_0004.tif  D_cal_cam1_0005.tif  D_cal_cam2_0001.tif  D_cal_cam2_0002.tif  D_cal_cam2_0003.tif  D_cal_cam2_0004.tif  D_cal_cam2_0005.tif  D_cal_cam3_0001.tif  D_cal_cam3_0002.tif  D_cal_cam3_0003.tif  D_cal_cam3_0004.tif  D_cal_cam3_0005.tif
test/inputs/test_PIVChallenge/camFile/: cam1.txt  cam2.txt  cam3.txt  cam4.txt
test/inputs/test_PIVChallenge/imgFile/: cam1ImageNames.txt  cam2ImageNames.txt  cam3ImageNames.txt  cam4ImageNames.txt
test/inputs/test_PredField/: getSol.py  pts_curr_1.csv  pts_curr_2.csv  pts_prev_1.csv
test/inputs/test_STB/: compareTracks.asv  compareTracks.m  config.txt  config_python.txt  correctRatio.m  getSol.py  plotTracks.m  removeShortTracks.asv  removeShortTracks.m  tracerConfig.txt  untitled.m  untitled2.asv  untitled2.m
test/inputs/test_STB/imgFile/: cam1ImageNames.txt  cam1ImageNames_python.txt  cam2ImageNames.txt  cam2ImageNames_python.txt  cam3ImageNames.txt  cam3ImageNames_python.txt  cam4ImageNames.txt  cam4ImageNames_python.txt
test/inputs/test_STB/imgFile/cam1/: img00000.tif  img00001.tif  img00002.tif  img00003.tif  img00004.tif  img00005.tif  img00006.tif  img00007.tif  img00008.tif  img00009.tif  img00010.tif  img00011.tif  img00012.tif  img00013.tif  img00014.tif  img00015.tif  img00016.tif  img00017.tif  img00018.tif  img00019.tif  img00020.tif  img00021.tif  img00022.tif  img00023.tif  img00024.tif  img00025.tif  img00026.tif  img00027.tif  img00028.tif  img00029.tif  img00030.tif  img00031.tif  img00032.tif  img00033.tif  img00034.tif  img00035.tif  img00036.tif  img00037.tif  img00038.tif  img00039.tif  (+10 more)
test/inputs/test_STB/imgFile/cam2/: img00000.tif  img00001.tif  img00002.tif  img00003.tif  img00004.tif  img00005.tif  img00006.tif  img00007.tif  img00008.tif  img00009.tif  img00010.tif  img00011.tif  img00012.tif  img00013.tif  img00014.tif  img00015.tif  img00016.tif  img00017.tif  img00018.tif  img00019.tif  img00020.tif  img00021.tif  img00022.tif  img00023.tif  img00024.tif  img00025.tif  img00026.tif  img00027.tif  img00028.tif  img00029.tif  img00030.tif  img00031.tif  img00032.tif  img00033.tif  img00034.tif  img00035.tif  img00036.tif  (+13 more)
test/inputs/test_Shake/: cam2frame00001.tif  getSol.py  img_cam3.tif  pt2d_list_cam1.csv  pt2d_list_cam2.csv
test/inputs/test_StereoMatch/: cam1ImageNames.txt  cam1frame00001.tif  cam2.txt  cam2ImageNames.txt  cam3ImageNames.txt  cam4ImageNames.txt  getSol.py  getTiffImg.py  img_cam2.tif  img_cam4.tif  pt2d_list_cam3.csv  pt2d_list_cam4.csv
test/inputs/test_myMATH/: getSol.py  test_function_5.csv  x_list.txt  y_list.txt
test/solutions/test_Camera/: cam1.txt  cam1_poly.txt  cam2.txt  cam2_poly.txt  cam3.txt  cam4.txt  cam5.txt  test_function_2.txt  test_function_3.txt  test_function_5.txt
test/solutions/test_ImageIO/: test_16bits.csv  test_8bits.csv
test/solutions/test_Matrix/: test_function_1.csv
test/solutions/test_ObjectFinder/: pt2d_list_cam1.csv  pt2d_list_cam2.csv  pt2d_list_cam3.csv  pt2d_list_cam4.csv  test_function_1.csv
test/solutions/test_Shake/: pt3d_list.csv
test/solutions/test_StereoMatch/: pt3d_list_img.csv
test/solutions/test_myMATH/: coeff_list.txt  test_function_5.csv
(+100 files in other folders)
